- Add table caption

--- a/CS_290/assignment2/style.css
+++ b/CS_290/assignment2/style.css
@@ -45,6 +45,15 @@ body {
     display: inline;
 }
 
+.tableCaption
+{
+    font-size:20px;
+    text-align: center;
+    margin: 20px;
+    font-weight: bold;
+    color: #878787;
+}
+
 .customTable .customTable-primaryColumn
 {
     font-style: italic;
