- Add dynamic HTML title

--- a/CS_290/app/views/index.ejs
+++ b/CS_290/app/views/index.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<title>CS_290: Assignment 2 - HTML/CSS</title>
+<title><%= title %></title>
 
 <body>
 
