--- a/CS_290/app/views/index.pug
+++ b/CS_290/app/views/index.pug
@@ -26,8 +26,15 @@ body
 
   div(class="outer-content")
     div(class="inner-content")
-      h1
-        = httpMethod
+        h1
+          = httpMethod
+        table
+          each item in stuff
+            tr
+              td
+                = item.name
+              td
+                = item.value
  
 
   div(class="outer-content")
