- Final CS 290 GET/POST work.

--- a/CS_290/app/views/error.pug
+++ b/CS_290/app/views/error.pug
@@ -28,5 +28,5 @@ body
     div(class="inner-content")
       img(src="images/hal9000.png")
       h1
-        |I'm Sorry dave, I can not find 
-        = error.url
+        |I'm sorry dave, I can not find 
+        =error.url
