--- a/CS_290/how-to-guide/public/css/style.css
+++ b/CS_290/how-to-guide/public/css/style.css
@@ -1,9 +1,8 @@
 body {
-    background-color:#373737
+    background-color: #373737
 }
 
-.nav_header
-{
+.nav_header {
     background-color: #615042;
     border: 10px #514032 solid;
 }
@@ -13,7 +12,6 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-
 }
 
 .nav_header li {
@@ -30,43 +28,48 @@ body {
     text-decoration: none;
 }
 
+
 /* Change the link color to #111 (black) on hover */
+
 .nav_header li a:hover {
     background-color: #385E86;
 }
 
-.nav_item_nav
-{
+.nav_item_nav {
     float: right !important;
 }
 
-.nav_item
-{
+.nav_item {
     display: inline;
 }
 
-.outer-content
-{
+.outer-content {
     width: 75%;
     padding: 20px;
-    background-color:#9D601E;
+    background-color: #9D601E;
     text-align: center;
     vertical-align: middle;
     margin: 20px auto;
 }
 
-
-.inner-content
-{
-    width: 75%;
+.inner-content {
+    width: 90%;
     padding: 20px;
-    background-color: #615042;
-    text-align: center;
+    background-color: lightgray;
+    text-align: left;
     vertical-align: middle;
     margin: 0 auto;
+    font-family: "Book Antiqua";
+    font-size: 1.5em;
 }
 
-.inner-content-text
-{
+.inner-content-code {
+    width: 90%;
+    padding: 10px;
+    background-color: #A7C4C9;
+    text-align: left;
     vertical-align: middle;
+    margin: 0 auto;
+    font-size: 0.7em;
+    font-family: "Courier New";
 }
