--- a/CS_290/how-to-guide/app/views/index.pug
+++ b/CS_290/how-to-guide/app/views/index.pug
@@ -87,32 +87,27 @@ body
         br
 
 
-  div(class="outer-content" id="raphaelContent")
-    div(class="inner-content")
-      | RaphaelJS is a javascript SVG rendering library which allows runtime binding of DOM elements properties.
-      br
-      br
-      | This provides dynamic binding of onclick and onhover for interactive visual interfaces.
-      br
-      br
-      | The API is well documented so this how-to will move on to advanced topics of manulipation of DOM elements.
-      br
-      br
-      | We'll start with a basic example of a element that you can click and cause an alert to be called.
-      br
-      br
+  div(id="raphaelContent")
+    div(class="outer-content")
+      div(class="inner-content")
+        | RaphaelJS is a javascript SVG rendering library which allows runtime binding of DOM elements properties.
+        br
+        br
+        | This provides dynamic binding of onclick and onhover for interactive visual interfaces.
+        br
+        br
+        | The API is well documented so this how-to will move on to advanced topics of manulipation of DOM elements.
+        br
+        br
+        | We'll start with a basic example of a element that you can click and cause an alert to be called.
+        br
+        br
 
-  div(class="outer-content" id="raphaelContent")
-    div(class="inner-content" style="width:80%")
+    div(class="outer-content")
+      div(class="inner-content" style="height:40vh;" id="raphaelExample1")
+        
 
-exports.Initialize = function () {
-  exports.viewportController = new viewportController();
-  exports.viewportController.viewportWidth = document.getElementById('dspviewport').offsetWidth;
-  exports.viewportController.viewportHeight = document.getElementById('dspviewport').offsetHeight;
-  exports.viewportController.screenWidth = exports.viewportController.viewportWidth;
-  exports.viewportController.screenHeight = exports.viewportController.viewportHeight;
-  exports.viewportController.graphics = new Raphael('dspviewport',
-    exports.viewportController.viewportWidth,
+
 
 
 
@@ -122,4 +117,5 @@ exports.Initialize = function () {
       | Example!
 
 script(src='http://requirejs.org/docs/release/2.2.0/minified/require.js')
+script(src="scripts/raphael.min.js")
 script(src="scripts/index.js")
